--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<section class="todoapp">
 			<header class="header">
-				<h1>todos1</h1>
+				<h1>Offline Todos</h1>
 				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<section class="main">
@@ -56,9 +56,7 @@
 
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
-			<p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Based off work by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
 		</footer>
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/helpers.js"></script>
